@startuml Model

enum Ruolo {
    PORTIERE
    DIFENSORE
    CENTROCAMPISTA
    ATTACCANTE
}

enum Piede {
    SINISTRO
    DESTRO
    AMBIDESTRO
}

enum Skill {
    COLPO_DI_TESTA
    TACKLE
    ROVESCIATA
    DRIBBLING
    PASSAGGIO
    TIRO
    CONTROLLO_PALLA
    FINTA
    CROSS
    VELOCITA
    AGILITA
    RESISTENZA
    VISIONE_DI_GIOCO
    POSIZIONAMENTO
    LEADERSHIP
}

class Calciatore {
    - id: int
    - nome: String
    - cognome: String
    - dataDiNascita: Date
    - dataDiRitiro: Date
    - piede: Piede
    - ruoli: ArrayList<Ruolo>
    - skills: ArrayList<Skill>
    - trofei: ArrayList<Trofeo>
    - carriera: ArrayList<Militanza>
    ---
    + getId(): int
    + getNome(): String
    + setNome(String): void
    + getCognome(): String
    + setCognome(String): void
    + getDataDiNascita(): Date
    + setDataDiNascita(Date): void
    + getDataDiRitiro(): Date
    + setDataDiRitiro(Date): void
    + getPiede(): Piede
    + setPiede(Piede): void
    + getRuoli(): ArrayList<Ruolo>
    + setRuoli(List<Ruolo>): void
    + getSkills(): ArrayList<Skill>
    + setSkills(List<Skill>): void
    + getTrofei(): ArrayList<Trofeo>
    + setTrofei(List<Trofeo>): void
    + getCarriera(): ArrayList<Militanza>
    + setCarriera(List<Militanza>): void
}

class Squadra {
    - nome: String
    - nazionalita: String
    ---
    + nome(): String
    + nazionalita(): String
}

class Militanza {
    - squadra: Squadra
    - partiteGiocate: int
    - goalSegnati: int
    - periodi: ArrayList<Periodo>
    ---
    + getSquadra(): Squadra
    + getPartiteGiocate(): int
    + setPartiteGiocate(int): void
    + getGoalSegnati(): int
    + setGoalSegnati(int): void
    + getPeriodi(): List<Periodo>
    + setPeriodi(List<Periodo>): void
}

class MilitanzaPortiere {
    - goalSubiti: int
    ---
    + getGoalSubiti(): int
    + setGoalSubiti(int): void
}

class Periodo {
    - dataInizio: Date
    - dataFine: Date
    ---
    + dataInizio(): Date
    + dataFine(): Date
}

abstract class Trofeo {
    - nome: String
    - data: Date
    ---
    + getNome(): String
    + getData(): Date
}

class TrofeoIndividuale {
    - idCalciatore: int
    ---
    + getIdCalciatore(): int
}

class TrofeoDiSquadra {
    - squadra: Squadra
    ---
    + getSquadra(): Squadra
}

interface Utente {
    ---
    + accediComeAmministratore(String): void
    + vediElencoCalciatori(): void
    + vediCaratteristicheCalciatore(int): void
    + filtraPer(Filtro): void
}

interface Amministratore {
    ---
    + inserisciCalciatore(String, String, Date, Date, List<Skill>, List<Ruolo>, Piede, List<Militanza>): void
    + modificaCalciatore(Calciatore, String, String, Date, Date, List<Skill>, List<Ruolo>, Piede, List<Militanza>): void
    + eliminaCalciatore(Calciatore): void
    + logout(): void
}

class Filtro {
    - nome: String
    - ruolo: String
    - piede: Piede
    - minimoGoalSegnati: Integer
    - massimoGoalSegnati: Integer
    - minimoGoalSubiti: Integer
    - massimoGoalSubiti: Integer
    - minimoEta: Integer
    - massimoEta: Integer
    - squadra: Squadra
    ---
    + getNome(): String
    + getRuolo(): String
    + getPiede(): Piede
    + getMinimoGoalSegnati(): Integer
    + getMassimoGoalSegnati(): Integer
    + getMinimoGoalSubiti(): Integer
    + getMassimoGoalSubiti(): Integer
    + getMinimoEta(): Integer
    + getMassimoEta(): Integer
    + getSquadra(): Squadra
    + Builder
}

' Generalizzazioni
Militanza <|- MilitanzaPortiere
Trofeo <|-l- TrofeoIndividuale
Trofeo <|-r- TrofeoDiSquadra
Utente <|-d- Amministratore

Calciatore "0..*" -r- "0..*" Squadra: - squadra
(Calciatore, Squadra) .. Militanza
Militanza *-l- Periodo: - periodi
Trofeo "0..*" <-d- "0..*" Calciatore: - trofei
TrofeoDiSquadra "0..*" -d-> "1" Squadra: - squadra
TrofeoIndividuale "0..*" -d-> "1" Calciatore: - calciatore

MilitanzaPortiere -[hidden]- Utente

@enduml